<resources
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Rental Calc</string>
    <string name="addPropertyTitle">Add Property</string>
    <string name="overviewTitle">Overview</string>
    <string name="worksheetTitle">Worksheet</string>
    <string name="notesTitle">Notes</string>
    <string name="picturesTitle">Pictures</string>
    <string name="summaryTitle">Summary</string>
    <string name="projectionsTitle">Projections</string>
    <string name="add">Add</string>
    <string name="about">About</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>
    <string name="share">Share</string>
    <string name="startIntro">Start Intro</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="addNewPhotoTitle">Add New Photo</string>
    <string name="importExistingPhoto">Import Existing Photo</string>
    <string name="captureNewPhoto">Capture New Photo</string>
    <string name="selectPhotoTitle">Select Photo</string>
    <string name="pictureCaptureError">Unable to capture or import photo</string>
    <string name="savingPicture">Saving picture</string>
    <string name="noCameraPermissionError">Unable to capture picture without the camera permission</string>
    <string name="deletePictureTitle">Remove Picture</string>
    <string name="deletePictureConfirmation">Please confirm that you want to delete this picture.</string>
    <string name="name">Name</string>
    <string name="value">Value</string>
    <string name="app_copyright_fmt">Copyright 2017-<xliff:g>%d</xliff:g> Branden Archer</string>
    <string name="app_license">Licensed under the GPLv3.</string>
    <string name="about_title_fmt">About <xliff:g id="app_name">%s</xliff:g></string>
    <string name="debug_version_fmt">Version: <xliff:g id="version">%s</xliff:g></string>
    <string name="app_revision_fmt">Revision Information: <xliff:g id="app_revision_url">%s</xliff:g></string>
    <string name="app_libraries"><xliff:g id="app_name">%s</xliff:g> uses the following third-party libraries: <xliff:g id="app_libraries_list">%s</xliff:g></string>
    <string name="app_resources"><xliff:g id="app_name">%s</xliff:g> uses the following third-party resources: <xliff:g id="app_resources_list">%s</xliff:g></string>
    <string name="noProperties">You don\'t have any properties at the moment. Click the "+" (plus) button up top to get started.\n\nRental Calc lets you create properties to help determine their investment potential.</string>
    <string name="blank" translatable="false"/>
    <string name="commercial">Commercial</string>
    <string name="condo">Condo</string>
    <string name="house">House</string>
    <string name="land">Land</string>
    <string name="multifamily">Multi-Family</string>
    <string name="manufactured">Manufactured</string>
    <string name="other">Other</string>
    <string name="carport">Car Port</string>
    <string name="garage">Garage</string>
    <string name="offstreet">Off-Street</string>
    <string name="onstreet">On-Street</string>
    <string name="none">None</string>
    <string name="privatelot">Private Lot</string>
    <string name="deletePropertyTitle">Remove Property</string>
    <string name="deletePropertyConfirmation">Please confirm that you want to delete this property.</string>
    <string name="purchasePriceField">Purchase Price:</string>
    <string name="afterRepairsValueField">After Repairs Value:</string>
    <string name="afterRepairsValueHelp">If no repairs are required, then this is the same as the purchase price.</string>
    <string name="financingTitle">FINANCING</string>
    <string name="useALoanField">Using a loan:</string>
    <string name="downPaymentField">Down Payment:</string>
    <string name="percentSymbol" translatable="false">%</string>
    <string name="interestRateField">Interest Rate:</string>
    <string name="loanDurationField">Loan Duration:</string>
    <string name="yearsUnit">Years</string>
    <string name="purchaseCostsTitle">PURCHASE COSTS</string>
    <string name="purchaseCostsField">Purchase Costs:</string>
    <string name="totalField">Total:</string>
    <string name="itemize">Itemize</string>
    <string name="percentOfPriceUnit">% of Price</string>
    <string name="repairRemodelCostsTitle">REPAIR/REMODEL COSTS</string>
    <string name="repairRemodelCostsField">Repair/Remodel Costs:</string>
    <string name="incomeTitle">INCOME</string>
    <string name="grossRentField">Gross Rent:</string>
    <string name="perMonthUnit">Per Month</string>
    <string name="otherIncomeField">Other Income:</string>
    <string name="expensesTitle">EXPENSES</string>
    <string name="percentOfRentUnit">% of Rent</string>
    <string name="assumptionsTitle">ASSUMPTIONS</string>
    <string name="vacancyField">Vacancy:</string>
    <string name="appreciationField">Appreciation:</string>
    <string name="percentPerYearUnit">% Per Year</string>
    <string name="incomeIncreaseField">Income Increase:</string>
    <string name="expensesIncreaseField">Expenses Increase:</string>
    <string name="incomeTaxRateField">Income Tax Rate:</string>
    <string name="incomeTaxRateValueHelp">Enter your expected tax rate for after tax cash flow calculations.</string>
    <string name="sellingCostsField">Selling Costs:</string>
    <string name="percentOfSalePriceUnit">% of Sale Price</string>
    <string name="landValueField">Land Value:</string>
    <string name="nickname">Nickname</string>
    <string name="addressTitle">ADDRESS</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="stateOrRegion">State/Region</string>
    <string name="zip">Zip</string>
    <string name="detailsTitle">DETAILS</string>
    <string name="propertyTypeField">Property Type:</string>
    <string name="bedsField">Beds:</string>
    <string name="bathsField">Baths:</string>
    <string name="squareFootageField">Square Footage:</string>
    <string name="squareFeet">Square Feet</string>
    <string name="lotSizeField">Lot Size:</string>
    <string name="lotSize">Lot Size</string>
    <string name="yearBuiltField">Year Built:</string>
    <string name="yearBuilt">Year Built</string>
    <string name="parkingField">Parking:</string>
    <string name="zoningField">Zoning:</string>
    <string name="zoning">Zoning</string>
    <string name="mlsNumberField">MLS Number:</string>
    <string name="mlsNumber">MLS Number</string>
    <string name="worksheet">Worksheet</string>
    <string name="pictures">Pictures</string>
    <string name="notes">Notes</string>
    <string name="analysisTitle">ANALYSIS</string>
    <string name="summary">Summary</string>
    <string name="projections">Projections</string>
    <string name="purchaseRepairRemodelTitle">PURCHASE, REPAIR, REMODEL</string>
    <string name="financedField">Financed:</string>
    <string name="totalCashNeededField">Total Cash Needed:</string>
    <string name="valuationTitle">VALUATION</string>
    <string name="pricePerSquareFootField">Price Per Square Foot:</string>
    <string name="operationFirstYearTitle">OPERATION (FIRST YEAR)</string>
    <string name="operationTitle">OPERATION</string>
    <string name="operatingIncomeField">Operating Income:</string>
    <string name="operatingExpensesField">Operating Expenses:</string>
    <string name="netOperatingIncomeField">Net Operating Income:</string>
    <string name="mortgageField">Mortgage:</string>
    <string name="cashFlowField">Cash Flow:</string>
    <string name="afterTaxCashFlowField">After Tax Cash Flow:</string>
    <string name="returnsTitle">RETURNS</string>
    <string name="capitalizationRateField">Capitalization Rate:</string>
    <string name="cashOnCashField">Cash On Cash:</string>
    <string name="rentToValueField">Rent To Value:</string>
    <string name="grossRentMultiplierField">Gross Rent Multiplier:</string>
    <string name="equityTitle">EQUITY</string>
    <string name="propertyValueField">Property Value</string>
    <string name="loanBalanceField">Loan Balance</string>
    <string name="totalEquityField">Total Equity</string>
    <string name="taxAdvantagesTitle">TAX ADVANTAGES</string>
    <string name="depreciationField">Depreciation</string>
    <string name="mortgageInterestField">Mortgage Interest</string>
    <string name="projectionText">Year: <xliff:g id="number">%d</xliff:g></string>
    <string name="purchasePriceHelpTitle">Purchase Price</string>
    <string name="purchasePriceDefinition">The price of the property.\n\nThis does not include the purchase costs or costs to repair or update the property.</string>
    <string name="afterRepairsValueHelpTitle">After Repairs Value</string>
    <string name="afterRepairsValueDefinition">The estimated market value of the property after repairs and updates.</string>
    <string name="purchaseCostsHelpTitle">Purchase Costs</string>
    <string name="purchaseCostsDefinition">The costs and fees associated with purchasing the property. These are also called closing costs.\n\nExamples of purchasing costs include: appraisal, property inspection, pest inspection, and homeowners’ insurance for the first year.</string>
    <string name="repairRemodelHelpTitle">Repair/Remodel Costs</string>
    <string name="repairRemodelDefinition">The costs for repairing and updating the property.\n\nExamples include paint, flooring, appliances, and cleaning.</string>
    <string name="grossRentHelpTitle">Gross Rent</string>
    <string name="grossRentDefinition">The total values of all rents collected from tenants. Does not consider vacancy or expenses.</string>
    <string name="otherIncomeHelpTitle">Other Income</string>
    <string name="otherIncomeDefinition">Any other income besides than that from rents.\n\nThis may include other services provided to tenants, such as yard maintenance, house cleaning, utilities, and coin-operated laundry and vending machine proceeds.</string>
    <string name="operatingExpensesHelpTitle">Operating Expenses</string>
    <string name="operatingExpensesDefinition">All the expenses paid while renting a property.\n\nExamples include insurance, 3rd party warranties, maintenance, property taxes, and utilities.</string>
    <string name="vacancyHelpTitle">Vacancy</string>
    <string name="vacancyDefinition">The percentage of time the property is expected to not being rented.\n\nIdeally the property will always be rented. However, the property may be vacant between tenants or while repairing or updating it.\n\nExample: if the property is expected to  be vacant one month out of the year, this is 1/12=8.3%</string>
    <string name="vacancyFormula">$$\\text{Vacancy} = \\frac{\\text{time not rented}}{\\text{total time}}$$</string>
    <string name="appreciationHelpTitle">Appreciation</string>
    <string name="appreciationDefinition">The yearly increase of the property\'s value.\n\nThis can be due to a number of reasons, which include increased demand or reduced supply, or inflation.</string>
    <string name="incomeIncreaseHelpTitle">Income Increase</string>
    <string name="incomeIncreaseDefinition">The yearly increase of the income generated by the property.\n\nInflation is the typical cause of the increase. This affects both the rent and other income from the property.</string>
    <string name="expensesIncreaseHelpTitle">Expenses Increase</string>
    <string name="expensesIncreaseDefinition">The yearly increase of the expenses paid while renting the property.\n\nInflation is the typical cause of the increase, and affects all expenses.</string>
    <string name="sellingCostsHelpTitle">Selling Costs</string>
</resources>