<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:background="@color/inputContrastBackground"
                                                 android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

</android.support.design.widget.AppBarLayout>

    <ScrollView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/inputContrastBackground"
                app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:orientation="vertical"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent">

            <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:stretchColumns="1"
                         android:background="@color/inputContrastBackground">

                <!-- Summary -->
                <View
                    android:layout_height="@dimen/inputBorderThickness"
                    android:layout_width="match_parent"
                    android:background="@color/inputBorder" />

                <TableRow
                    android:id="@+id/propertyView"
                    android:background="@color/inputBackground"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="false">

                    <View
                        android:gravity="start"
                        android:layout_height="match_parent"
                        android:layout_width="@dimen/inputBorderThickness"
                        android:background="@color/inputBorder" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/propertyOverviewEntryPadding">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_weight="1">

                            <TextView
                                android:textSize="@dimen/overviewValueSize"
                                android:id="@+id/nickname"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"/>

                            <LinearLayout
                                android:orientation="horizontal"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:baselineAligned="true">

                                <TextView
                                    android:textSize="@dimen/propertySummaryDetailSize"
                                    android:id="@+id/street"
                                    android:layout_height="match_parent"
                                    android:layout_width="wrap_content"
                                    android:layout_weight="2"/>

                                <TextView
                                    android:textSize="@dimen/propertySummaryDetailSize"
                                    android:gravity="end"
                                    android:id="@+id/price"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"/>
                            </LinearLayout>

                            <TextView
                                android:textSize="@dimen/propertySummaryDetailSize"
                                android:id="@+id/stateZip"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="fill_parent"
                            android:gravity="center">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_weight="0"
                                android:src="@drawable/ic_chevron_right_black_30dp"/>
                        </LinearLayout>
                    </LinearLayout>

                    <View
                        android:layout_height="match_parent"
                        android:layout_width="@dimen/inputBorderThickness"
                        android:background="@color/inputBorder" />


                </TableRow>

                <!-- Worksheet -->
                <View
                    android:layout_height="@dimen/inputBorderThickness"
                    android:layout_width="match_parent"
                    android:background="@color/inputBorder" />

                <TableRow
                    android:id="@+id/propertyWorksheet"
                    android:background="@color/inputBackground"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true">

                    <View
                        android:gravity="start"
                        android:layout_height="match_parent"
                        android:layout_width="@dimen/inputBorderThickness"
                        android:background="@color/inputBorder" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="@dimen/propertyOverviewEntryPadding">

                        <TextView
                            android:textSize="@dimen/overviewValueSize"
                            android:text="@string/worksheet"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"/>

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_weight="0"
                            android:src="@drawable/ic_chevron_right_black_30dp"/>
                    </LinearLayout>

                    <View
                        android:gravity="end"
                        android:layout_height="match_parent"
                        android:layout_width="@dimen/inputBorderThickness"
                        android:background="@color/inputBorder" />
                </TableRow>

                <!-- Notes -->
                <View
                    android:layout_height="@dimen/inputBorderThickness"
                    android:layout_width="match_parent"
                    android:background="@color/inputBorder" />

                <TableRow
                    android:id="@+id/propertyNotes"
                    android:background="@color/inputBackground"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true">

                    <View
                        android:gravity="start"
                        android:layout_height="match_parent"
                        android:layout_width="@dimen/inputBorderThickness"
                        android:background="@color/inputBorder" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="@dimen/propertyOverviewEntryPadding">

                        <TextView
                            android:textSize="@dimen/overviewValueSize"
                            android:text="@string/notes"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"/>

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_weight="0"
                            android:src="@drawable/ic_chevron_right_black_30dp"/>
                    </LinearLayout>

                    <View
                        android:gravity="end"
                        android:layout_height="match_parent"
                        android:layout_width="@dimen/inputBorderThickness"
                        android:background="@color/inputBorder" />
                </TableRow>

                <!-- Analysis title -->
                <View
                    android:layout_height="@dimen/inputBorderThickness"
                    android:layout_width="match_parent"
                    android:background="@color/inputBorder" />
                <TableRow
                    android:background="@color/inputContrastBackground"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_column="1"
                        android:paddingLeft="@dimen/titlePaddingHorizontal"
                        android:paddingRight="@dimen/titlePaddingHorizontal"
                        android:paddingStart="@dimen/titlePaddingHorizontal"
                        android:paddingTop="@dimen/titlePaddingTop"
                        android:text="@string/analysisTitle"
                        android:textSize="@dimen/overviewTitleSize"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </TableRow>

                <!-- Summary -->
                <View
                    android:layout_height="@dimen/inputBorderThickness"
                    android:layout_width="match_parent"
                    android:background="@color/inputBorder" />

                <TableRow
                    android:id="@+id/propertySummary"
                    android:background="@color/inputBackground"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true">

                    <View
                        android:gravity="start"
                        android:layout_height="match_parent"
                        android:layout_width="@dimen/inputBorderThickness"
                        android:background="@color/inputBorder" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="@dimen/propertyOverviewEntryPadding">

                        <TextView
                            android:textSize="@dimen/overviewValueSize"
                            android:text="@string/summary"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"/>

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_weight="0"
                            android:src="@drawable/ic_chevron_right_black_30dp"/>
                    </LinearLayout>

                    <View
                        android:gravity="end"
                        android:layout_height="match_parent"
                        android:layout_width="@dimen/inputBorderThickness"
                        android:background="@color/inputBorder" />
                </TableRow>

                <!-- Projections -->
                <View
                    android:layout_height="@dimen/inputBorderThickness"
                    android:layout_width="match_parent"
                    android:background="@color/inputBorder" />

                <TableRow
                    android:id="@+id/propertyProjections"
                    android:background="@color/inputBackground"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true">

                    <View
                        android:gravity="start"
                        android:layout_height="match_parent"
                        android:layout_width="@dimen/inputBorderThickness"
                        android:background="@color/inputBorder" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="@dimen/propertyOverviewEntryPadding">

                        <TextView
                            android:textSize="@dimen/overviewValueSize"
                            android:text="@string/projections"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"/>

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_weight="0"
                            android:src="@drawable/ic_chevron_right_black_30dp"/>
                    </LinearLayout>

                    <View
                        android:gravity="end"
                        android:layout_height="match_parent"
                        android:layout_width="@dimen/inputBorderThickness"
                        android:background="@color/inputBorder" />
                </TableRow>

                <View
                    android:layout_height="@dimen/inputBorderThickness"
                    android:layout_width="match_parent"
                    android:background="@color/inputBorder" />
            </TableLayout>
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>